<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Constants of application  -->
    <string name="appName">HS Form</string>
    <string name="albumName">HSForm_album</string>
    <string name="shortAppName">Form</string>

    <!-- Parts of main screen  -->
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="status">Status</string>
    <string name="lonlat">Position (lon, lat)</string>
    <string name="start_datetime">Begin time</string>
    <string name="datetime">Actual time</string>
    <string name="picture">Picture</string>

    <string name="submitButton">Send</string>
    <string name="getTime">Get time</string>
    <string name="clearButton">Clear form</string>
    <string name="submitSMS">SMS</string>

    <string name="currentDateTime">Current timestamp</string>
    <string name="coordsFromGPS">Coordinates from GPS</string>
    <string name="cameraButtonDesc">Open camera to take picture</string>
    <string name="imageViewDesc">Thumbnail of picture</string>

    <string-array name="categoryList">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="statusList">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <!-- Parts of Menu  -->
    <string name="menu_more">More</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <!-- Parts of uploaded form  -->
    <string name="titlePartName">title</string>
    <string name="descriptionPartName">description</string>
    <string name="categoryPartName">category</string>
    <string name="statusPartName">status</string>
    <string name="lonPartName">lon</string>
    <string name="latPartName">lat</string>
    <string name="timestampPartName">timestamp</string>
    <string name="startTimestampPartName">starttimestamp</string>
    <string name="picturePartName">picture</string>
    <string name="pictureRotationAng">rotationangle</string>
    <string name="pictureSizePartName">picturesize</string>
    <string name="userNamePart">user</string>

    <!-- Parts of settings form -->
    <string name="pref_url_key">pref_url</string>
    <string name="pref_url_title">Service URL</string>
    <string name="pref_url_summ">URL of service to send POIs</string>
    <!-- <string name="pref_url_default">https://erra.ccss.cz:443/hsform/rest/poi/insert/</string> -->
    <string name="pref_url_default">https://erra.pprd-east.eu:443/hsform/rest/poi/insert/</string>
    <!-- <string name="pref_url_default">http://147.228.44.88:8080/hsform/rest/poi/insert/</string> -->
    <string name="pref_user_key">pref_user</string>
    <string name="pref_user_title">User name</string>
    <string name="pref_user_summ">Name of the user</string>
    <string name="pref_user_default">username</string>
    <string name="pref_pass_key">pref_pass</string>
    <string name="pref_pass_title">User password</string>
    <string name="pref_pass_summ">Password of the user</string>
    <string name="pref_certpass_key">pref_certpass</string>
    <string name="pref_certpass_title">Certificate store password</string>
    <string name="pref_certpass_summ">Password of the certificate store given by manager of portal</string>

    <!-- Debug values -->
    <string name="TAG">HsForm</string>
    <string name="err_location">Location is not available!</string>
    <string name="errorExtra">cz.hsrs.hsform.error</string>

    <!-- About screen -->
    <string name="about_text"><![CDATA[
      <p>This application is <a href="http://erra.pprd-east.eu/about">PPRD East - Electronic Regional Risk Atlas</a> mobile client.</p>
      <p>Application collects point data with several attributes (text, location, timestamp, photo) and sends points to
      <a href="http://erra.pprd-east.eu/">ERRA geoportal</a>.</p>

      <p>Cooperation (optional) with other apps:<br/>
      - <a href="https://play.google.com/store/apps/details?id=menion.android.locus">Locus</a><br/>
      -- Get coordinates from a map,<br/>
      -- display available WMS / view services.<br/>
      </p>

      <p><a href="http://www.hsrs.cz" target="_blank">Help Service Remote Sensing</a></p>
      ]]>
    </string>

</resources>
