<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- should always be in the overflow -->
    <item
        android:id="@+id/menu_more"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="always"
        android:title="@string/menu_more">

        <menu>
            <!-- Settings -->
            <item
                android:id="@+id/action_settings"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/action_settings"/>
            <!-- About -->
            <item
                android:id="@+id/action_about"
                android:showAsAction="never"
                android:title="@string/action_about"/>
        </menu>

    </item>

</menu>
